--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     compile("com.sun.xml.bind:jaxb-impl:2.3.1")
     compile("org.codehaus.groovy:groovy-all:${ver.groovy}") {
         exclude group: 'com.beust', module: 'jcommander'
+        exclude group: 'org.testng', module: 'testng'
     }
     compile("org.apache.logging.log4j:log4j-to-slf4j:2.11.1")
     compile("org.slf4j:slf4j-simple:1.6.1")
